# spray-vision

./: .gitignore  DATA_PIPELINE.md  DOCUMENTATION_INDEX.md  MODELS_DOCUMENTATION.md  Makefile  NOTEBOOKS_GUIDE.md  PROJECT_DOCUMENTATION.md  README.md  TECHNICAL_DOCUMENTATION.md  USER_GUIDE.md  pyproject.toml  requirements.txt
data/processed/: eth_spray_merged_preprocessed.csv  ethanol_spray_tidy.csv  preprocessed_dataset.csv
data/raw/: DataSheet_ETH_250902.xlsx
docs/: ANN_MODEL_DOCUMENTATION.md  GEMINI.md  ML_PIPELINE_DOCUMENTATION.md  RESULTS_AND_COMPARISON.md  ml and ann results.pptx  ~$ml and ann results.pptx
models/: ANN_improved_regressor.h5  ANN_regressor.h5  DecisionTree_regressor.joblib  KNN_regressor.joblib  LinearRegression_regressor.joblib  SVR_regressor.joblib  ann_input_scaler.joblib  ann_target_scaler.joblib
notebooks/: ann-pipeline.ipynb  ann_pipeline.ipynb  build-tidy-csv.ipynb  data-preprocessing-pipeline.ipynb  exploratory-data-analysis.ipynb  feature-importance-gradient-boosting.ipynb  feature-importance.ipynb  final-plots.ipynb  first-pipeline.ipynb  ml-pipeline.ipynb  ml-plots.ipynb  new-plots.ipynb  plots.ipynb
outputs/: ANN_improved_actuals.csv  ANN_improved_metrics.csv  ANN_improved_predictions.csv  baseline_models_config.csv  dataset_description.csv  detailed_model_metrics.csv  overall_model_metrics.csv  per_target_metrics.csv  rounded_metrics.xlsx  sample_experimental_head.csv
spray_prediction_ml/: __init__.py  dataset.py  features.py  plots.py
spray_prediction_ml/modeling/: predict.py  train.py
