[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spray_prediction_ml"
version = "0.0.1"
description = "Time Series Prediction of Spray Characteristics using Classical Machine Learning Approaches"
authors = [
  { name = "Yuvin Raja" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["spray_prediction_ml"]
include = ["pyproject.toml", "spray_prediction_ml/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["spray_prediction_ml"]
force-sort-within-sections = true

