[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spray-vision"
version = "0.1.0"
description = "ML-Based Spray Characteristics Prediction using Classical Machine Learning and Neural Networks"
authors = [
  { name = "Yuvin Raja" },
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["machine-learning", "spray-prediction", "neural-networks", "data-science"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.20.0",
    "keras>=3.11.0",
    "openpyxl>=3.1.0",
    "joblib>=1.5.0",
    "jupyter>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "ipykernel",
    "ruff",
]
viz = [
    "matplotlib>=3.10.0",
    "seaborn>=0.13.0",
]
extra = [
    "xgboost>=3.0.0",
]


[tool.ruff]
line-length = 99
target-version = "py310"
extend-include = ["*.ipynb"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "data/",
    "models/",
    "outputs/",
    "reports/",
]

[tool.ruff.lint]
extend-select = [
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B905",  # zip without strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["spray_vision"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# Jupyter notebook specific configuration
[tool.jupyter]
notebook_dir = "notebooks"

